# getting-started

./: .env  .env.example  .gitignore  .gitmodules  CLAUDE.md  Makefile  README.md  pyproject.toml  run_notebooks.py
.claude/: settings.json
.claude/docs/: notebook-execution.md  notebook-server.md  vault-selection.md
.claude/plans/: plan-notebook-server.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: run_notebooks.yml  test.yml
data/: eth-prediction.parquet  hl-vault-test.md
getting_started/: __init__.py  curator.py  hyperliquid_vault_universe.py  notebook_static_server.py  vault_universe_creation.py
getting_started/finrl/: portfolio_optimization_env.py
getting_started/jupyter_execute_agent/: __init__.py  cli.py  core.py  extension.py
getting_started/lstm/: prompt.txt
notebooks/grid-search/: bollinger-bands-matic-breakout.ipynb  btc-bb-1h-binance-optimiser.ipynb  momentum-basket-optimiser.ipynb  multipair-breakout-grid-atr-slow.ipynb
notebooks/liquidity-provision/: README.md
notebooks/single-backtest/: altenative-data.ipynb  bitcoin-breakout-atr-short.ipynb  eth-mfi.ipynb  liquidity-risk-analysis.ipynb  matic-breakout.ipynb  momentum-basket.ipynb  portfolio-construction.ipynb
scratchpad/: README.md  plotly-bug.ipynb
scratchpad/bad-data/: README.md
scratchpad/base/: 08-base-candidate-1-equal-weight.ipynb
scratchpad/base-active/: 31-eth-optimiser-lookback.ipynb  35-base-atr-optimiser.ipynb
scratchpad/bb/: btc-bb-1h-binance-optimiser.ipynb  btc-bb-4h-sharpe.ipynb  btc-bb-8h-win-rate.ipynb
scratchpad/double-atr/: double-atr-single.ipynb
scratchpad/eth-breakout/: eth-breakout-atr-15m.ipynb  eth-breakout-optimiser.ipynb  grid-eth-breakout-atr-1h.ipynb
scratchpad/finrl/: 00-download-and-prefilter-data-csv.py  00-download-and-prefilter-finrl-data.py  01-finrl-portfolio-uniswap.ipynb  02-drl-portfolio-allocation.ipynb  FinRL_PortfolioOptimizationEnv_Demo.ipynb  finrl-portfolio-uniswap.ipynb  policy_EIIE.pt
scratchpad/hyperliquid-waterfall-rc/: 01-initial.ipynb  04-backtest-rebalancing-method-trials-plan.md  40-allocation-strategy-research-plan.md  hyperliquid-young-vault-cohort-march-2026.md
scratchpad/misc/: parallel-optimization.ipynb
scratchpad/multipair-breakout/: multipair-breakout-15m-decision.ipynb  multipair-breakout-4h-optimiser-balanced.ipynb  multipair-breakout-4h-optimiser-btc-eth-only.ipynb  multipair-breakout-4h-optimiser.ipynb
scratchpad/prompts/: build-vault-universe.txt  scripted-build-vault-universe.md
scratchpad/rsi-50/: 01-rsi-50.ipynb
scratchpad/vault-of-vaults/: 09-alternative-allocation.ipynb  09-increased-token-set.ipynb  31-waterfall-diversified-larger-universe-grid-search-4d-rebalance.ipynb  34-rerun.ipynb  36-hyperliquid-sharpe-entry-gate-grid-search.ipynb  38-hyperliquid-sharpe-entry-gate-daily-rebalance.ipynb  40-hyperliquid-august-start.ipynb  43-hyperliquid-univ-daily-calmar.ipynb  44-hyperliquid-calmar-fixed-concentration.ipynb  47-hyperliquid-calmar-signal-transform.ipynb  48-hyperliquid-calmar-alternative-ratios.ipynb  71-hyperliquid-rank-composite-metadata-selection.ipynb  72-hyperliquid-tiered-concentration-hlp.ipynb  NB-lookahead-bias-audit.ipynb  README.md  age-ramp-vs-equal-weight-ideas.md  cash-left-table.md  hopefylly-final-hyperliquid-experiements.md  hyperliqud-more-ideas.md  hyperliquid-signal-decision-memo.md  hyperliquid-vault-candidate-signals.md  more-cash-allocation-ideas.md  more-experiment-ideas.md  new-hyperliquid-ideas.md  rebalanching-trials.md  rerun-differences.md
scratchpad/vol-basket/: 01-vol-binance-data-skeleton-meme.ipynb  README.md
scratchpad/volatility-analysis/: regime-filter-optimise.ipynb  regime-filter-playground.ipynb  regime-filter-rolling-daily.ipynb
scratchpad/volume/: floki-mfi-binance.ipynb
scratchpad/weekly-momentum-atr/: 01-weekly-momentum-atr.ipynb
scratchpad/xchain/: 02-results-summary.txt  03-results-summary.txt  04-results-summary.txt  05-results-summary.txt  06-results-summary.txt  07-results-summary.txt  08-results-summary.txt  09-results-summary.txt  10-results-summary.txt  11-results-summary.txt  EXPERIEMENTS.md
scripts/: analyse-losing-vault-positions.py  download-all-binance-pairs.py  export-csv-uniswap-v2-v3-ethereum-top-100-sniffed.py  export-csv-uniswap-v2-v3-ethereum-top-100.py  filter-top-vaults.py  hyperliquid-filter-top-vaults.py  larger-filter-top-vaults.py  prefilter-polygon.py  prefilter-uniswap-v2-v3-ethereum-1d.py  prefilter-uniswap-v2-v3-ethereum.py  prefilter-uniswap-v3-ethereum.py
scripts/erc-4626/: top-vaults-by-monthly-returns.py
scripts/uniswap-trading-universe/: 01-export-csv-uniswap-v2-v3-ethereum-top-100.py  (+3 more)
tests/: test_jupyter_execute_agent.py  test_notebook_static_server.py  test_notebooks.py
(+14 files in other folders)
