[tool.poetry]
name = "trading-strategy-getting-started"
version = "0.1"
description = "Trading Strategy Getting Started kit"
authors = ["Mikko Ohtamaa <mikko@opensourcehacker.com>"]
license = "MIT"
readme = "README.md"
keywords = ["algorithmic trading", "ethereum", "cryptocurrency", "tradingview", "quantitative finance", "binance", "coinbase", "uniswap"]
homepage = "https://tradingstrategy.ai"
repository = "https://github.com/tradingstrategy-ai/getting-started"
packages = [
    { include = "getting_started" },
]


#
# TODO: It's very hard to make local dev env to have trade-executor
# editable dependency with Poetry at the moment.
# Thus we assume is that if you install yourself, you have cloned
# trade-executor to ../trade-executor path.
# Or change the line below.
#
# Poetry develop = true and Visual Studio Code bug https://github.com/microsoft/pylance-release/issues/4664
#
[tool.poetry.dependencies]
python = ">=3.11,<=3.12"
trade-executor = {path = "../trade-executor", develop = true, extras=["execution", "quantstats"]}
ipython = "^8.12.0"
ipdb = "^0.13.13"
parquet-cli = "^1.3"
finrl = {path = "deps/FinRL", develop = true}
alpaca-trade-api = {path = "deps/alpaca-trade-api-python", develop = true}
alpaca-py = "^0.37.0"
selenium = "^4.28.0"
webdriver-manager = "^4.0.2"
gym = "^0.26.2"
torch-geometric = "^2.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
packages = [
    { include = "getting_started" },
]

# We hate arbitrary line lengths
[tool.black]
line-length = 999

[tool.isort]
profile = "black"

# We hate arbitrary line lengths
[flake8]
max-line-length = 999
extend-ignore = "E203"